[gd_scene load_steps=7 format=3 uid="uid://clpwuu5ewhadp"]

[ext_resource type="Script" path="res://code/health_orb.gd" id="1_jm3re"]
[ext_resource type="Texture2D" uid="uid://bj4u54sv16etw" path="res://images/health_orb.png" id="1_x5o4y"]
[ext_resource type="Texture2D" uid="uid://brlclc35t2aj2" path="res://images/grunt_bullet.png" id="3_sarlm"]
[ext_resource type="AudioStream" uid="uid://c6txrxtuv2pwm" path="res://sounds/orb_spawn.wav" id="4_ulnai"]

[sub_resource type="SpriteFrames" id="SpriteFrames_v0vcq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_sarlm")
}],
"loop": true,
"name": &"expired",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_x5o4y")
}],
"loop": true,
"name": &"fresh",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_3bby0"]

[node name="health_orb" type="Area2D"]
collision_layer = 8
script = ExtResource("1_jm3re")

[node name="OrbModel" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_v0vcq")
animation = &"fresh"
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3bby0")
metadata/_edit_group_ = true

[node name="Timer" type="Timer" parent="."]
wait_time = 3.495
one_shot = true
autostart = true

[node name="SpawnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ulnai")
volume_db = -20.658
pitch_scale = 1.25

[node name="DespawnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ulnai")
volume_db = -22.083
pitch_scale = 1.84

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
